[package]
name = "wjtb_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.30.4"
chrono = "0.4.24"
chrono-tz = "0.8.1"
serde = { version = "1.0" }
serde_json = "1.0"
[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
